# mpeg-3dg-renderer

./: CMakeLists.txt  README.md  build.sh  clear.sh  release_note.txt  tidy.sh
cfg/: circle.txt  create_path.sh  plane.txt  plane_long.txt  plane_short.txt  plane_short2.txt
include/: PccRendererCamera.h  PccRendererCameraPath.h  PccRendererConfig.h.in  PccRendererDef.h  PccRendererImage.h  PccRendererObject.h  PccRendererObjectMesh.h  PccRendererObjectPointcloud.h  PccRendererParameters.h  PccRendererPrimitive.h  PccRendererProgram.h  PccRendererSequence.h  PccRendererShader.h  PccRendererSoftwareRenderer.h  PccRendererText.h  PccRendererWindow.h
scripts/: convert_video.sh  renderer.sh
source/: PccRendererCamera.cpp  PccRendererCameraPath.cpp  PccRendererMain.cpp  PccRendererObjectMesh.cpp  PccRendererObjectPointcloud.cpp  PccRendererParameters.cpp  PccRendererPrimitive.cpp  PccRendererProgram.cpp  PccRendererSequence.cpp  PccRendererShader.cpp  PccRendererSoftwareRenderer.cpp  PccRendererText.cpp  PccRendererWindow.cpp
